--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "slick-carousel": "^1.8.1",
         "socket.io-client": "^4.3.2",
         "styled-components": "^5.3.0",
+        "surge": "^0.23.0",
         "sweetalert2": "^11.1.2",
         "swiper": "^6.8.1",
         "vercel": "^23.1.2",
