--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-avatar": "^3.10.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
     "react-media-recorder": "^1.6.6",
