--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID=825659946153-qk4v8ckvnve80n8jonc310onr2jua1qq.apps.googleusercontent.com
 REACT_APP_HOST_BASE=https://meetingbe.herokuapp.com
+REACT_APP_BE_DOMAIN=meetingbe.herokuapp.com
