--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.23.0",
     "dotenv": "^16.0.1",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
@@ -30,7 +31,6 @@
     "react-avatar": "^3.10.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-dotenv": "^0.1.3",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.5",
     "react-media-recorder": "^1.6.6",
