--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_CLIENT_ID=825659946153-qk4v8ckvnve80n8jonc310onr2jua1qq.apps.googleusercontent.com
 REACT_APP_HOST_BASE=http://localhost:3002
+REACT_APP_HOST_NAME=localhost
+REACT_APP_HOST_PORT=3002
