--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ REACT_APP_CLIENT_ID=825659946153-qk4v8ckvnve80n8jonc310onr2jua1qq.apps.googleuse
 REACT_APP_HOST_BASE=https://meetingbe.herokuapp.com
 REACT_APP_HOST_NAME=meetingbe.herokuapp.com
 REACT_APP_HOST_PORT=443
+REACT_APP_SOCKET_HOST=https://meetingbe.herokuapp.com
