--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.38.0",
     "react-media-recorder": "^1.6.6",
     "react-redux": "^7.2.5",
+    "react-resize-detector": "^7.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
