--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "jwt-decode": "^3.1.2",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
-    "peerjs": "^1.3.2",
+    "peerjs": "^1.4.7",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-cookie": "^4.1.1",
@@ -41,6 +41,7 @@
     "react-scroll": "^1.8.4",
     "react-select": "^5.2.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^9.1.1",
     "react-waypoint": "^10.1.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
