--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.38.0",
