--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_CLIENT_ID=825659946153-qk4v8ckvnve80n8jonc310onr2jua1qq.apps.googleusercontent.com
-REACT_APP_HOST_BASE=https://meetingbe.herokuapp.com
+REACT_APP_HOST_BASE=https://utemeetingbe-production.up.railway.app
 REACT_APP_HOST_NAME=meetingbe.herokuapp.com
-REACT_APP_HOST_PORT=443
-REACT_APP_SOCKET_HOST=https://meetingbe.herokuapp.com
+# REACT_APP_HOST_PORT=443
+REACT_APP_SOCKET_HOST=https://utemeetingbe-production.up.railway.app
